# genshin-unlock

./: CMakeLists.txt  README.md  README.zh-Hans.md  README.zh-Hant.md
include/common/: Constants.hpp
include/loader/: Config.hpp  Version.hpp
include/plugin/: Config.hpp  Events.hpp  Helper.hpp  Logging.hpp  Plugin.hpp
include/plugin/components/: ConfigManager.hpp  ConfigManagerInl.hpp  CursorObserver.hpp  CursorState.hpp  FovUnlocker.hpp  FpsUnlocker.hpp  KeyboardObserver.hpp  PersistentObject.hpp  PersistentObjectInl.hpp  Unlocker.hpp  VirtualKeyInput.hpp  VirtualKeyState.hpp  WindowObserver.hpp  WindowState.hpp
include/plugin/interfaces/: Common.hpp  ComponentBase.hpp  ComponentBaseInl.hpp  IComponent.hpp  IComponentInl.hpp  IMediator.hpp  IMediatorInl.hpp  IRunnable.hpp  IRunnableInl.hpp
include/util/: Concepts.hpp  ExponentialFilter.hpp  ExponentialFilterInl.hpp  Math.hpp  MinHook.hpp  MinHookInl.hpp  Type.hpp  Version.hpp
include/util/win/: Console.hpp  Dialogue.hpp  File.hpp  FileInl.hpp  Loader.hpp  LoaderInl.hpp  Shell.hpp  String.hpp  StringInl.hpp  User.hpp  Version.hpp  VirtualKey.hpp
include/utils/: ExponentialFilter.hpp  ExponentialFilterInl.hpp  FileWatcher.hpp  FileWatcherInl.hpp  MinHook.hpp  MinHookInl.hpp
include/utils/win/: File.hpp  FileInl.hpp  Filesystem.hpp  FilesystemInl.hpp  Loader.hpp  LoaderInl.hpp  String.hpp  User.hpp  UserInl.hpp
res/: loader.rc  version.rc.in
src/: common.ixx  loader.ixx  plugin.ixx  util.ixx
src/common/: Constants.ixx
src/loader/: Config.cpp  Config.ixx  Main.cpp  Version.cpp
src/plugin/: Config.cpp  Config.ixx  DllMain.cpp  Helper.cpp  Helper.ixx  Logging.cpp  Plugin.cpp  Plugin.ixx
src/plugin/components/: ComponentBase.ixx  ConfigManager.cpp  CursorObserver.cpp  CursorState.cpp  CursorState.ixx  FovUnlocker.cpp  FovUnlocker.ixx  FpsUnlocker.cpp  FpsUnlocker.ixx  KeyboardObserver.cpp  PersistentObject.ixx  Unlocker.cpp  VirtualKeyInput.cpp  VirtualKeyState.cpp  VirtualKeyState.ixx  WindowObserver.cpp  WindowState.cpp  WindowState.ixx
src/util/: ExponentialFilter.ixx  Version.cpp  Version.ixx
src/util/win/: Console.cpp  Dialogue.cpp  File.cpp  Loader.cpp  Shell.cpp  String.cpp  User.cpp  Version.cpp
src/utils/win/: File.cpp  Loader.cpp  String.cpp  User.cpp
